--- a/public/about.html
+++ b/public/about.html
@@ -1,5 +1,5 @@
 <h1>About Me</h1>
 <p>Hi, I'm Joseph, a CNC machinist and programmer with a passion for precision and problem solving. My background in machining has given me a deep understanding of manufacturing processes , automation, and technical programming. Now, I'm expanding my skill set by studying full-stack web development, where I can apply my logical thinking and attention to detail in a new and exciting way.
 </p>
-<p>I'm currently honing my skills in front-end and back-end technologies, working on projects that bridge the gap between physical and digital solutions. Whether it's writing G-code for a CNC machine or developing a dynamic web application, I love tackling challenges and creating efficient, well-structured solutins.</p>
+<p>I'm currently honing my skills in front-end and back-end technologies, working on projects that bridge the gap between physical and digital solutions. Whether it's writing G-code for a CNC machine or developing a dynamic web application, I love tackling challenges and creating efficient, well-structured solutions.</p>
 <p>Feel free to check out my projects and connect with me. I'm always eager to learn, collaborate, and explore new oppurtunities!</p>
